# hivemind

./: .env.example  .gitignore  Makefile  README.md  config.yaml  hivemind.service  pyproject.toml
src/hivemind/: __main__.py  agent.py  bot.py  config.py  event_consumer.py  personas.py  sessions.py  tools.py  views.py
